  - This new feature is switched on by default and can be switched off in
    Menu File --> New Session Properties --> Tab SQL --> Show SQL execution errors in result tab.
  - Along with this feature comes a new Message Panel right mouse menu "Save size 0" that allows
    to hide the Message panel at application start up.

Bug-fixes:

3088572: Squirrel fails when user tries to edit DB fields which have particular characters.

3175871: On export to Excel, some numeric values are not exported correctly.  

SQL Scripts Plugin: Increased multi table script configuration dialog's size.

3171762: Wrong syntax for DROP KEY (When qualify table name preference is selected this produced two schema
         or catalog prefixes on the table name)
3148653: Missing App Icon on Mac OS X (Fix is available in the Mac OS X 3.2.1 installer file)

Fixed NullPointerException in Hibernate Plugin when executing HQL with 'view objects' switched on.

Hibernate Plugin: Made HQL code completion work more exact.

Hibernate Plugin: Removed unused imports to regain compile independence from Hibernate API changes, see patch ID 3168381

3.2.1 (12/29/2010)
==================

Enhancements:

Feature request 3030479: New global preference that allows scrollable tabbed pane for Session tabs.

Feature request 1608435: (checkbox in I18N administration: "show only bundles with missing translations").
        Thanks to Ivo Neri for the patch.

Updated translation for Italian (Thanks to Ivo Neri)

New translation
 Japanese (Thanks to Toshiki IGA)

Graph Plugin: Multiple tables can now be selected and moved simultanously
  Thanks to Markus Schulz for the patch.

New Session property to let SQuirreL set fetch size (call Statement.setFetchSize(int)).
  See Session properties --> SQL tab.
  Thanks to Stefan (wis775) for the patch.


Bug-fixes:

3138746: Typo within PluginClassName of SyntaxPlugin.
3137390: Cannot connect after latest software update.