@@ -25,6 +25,8 @@ Display errors in result tab:
 
 Bug-fixes:
 
+3196153: When typing using shift, you must release shift to type space
+
 3088572: Squirrel fails when user tries to edit DB fields which have particular characters.
 
 3175871: On export to Excel, some numeric values are not exported correctly.  
